@@ -35,13 +35,30 @@ function xoops_module_uninstall_wgevents(\XoopsModule $module)
     $moduleDirNameUpper = \mb_strtoupper($moduleDirName);
 
     $helper = Wgevents\Helper::getInstance();
+    $utility = new Wgevents\Utility();
 
     $success = true;
     $helper->loadLanguage('admin');
 
     //------------------------------------------------------------------
-    // Rename uploads folder to BAK and add date to name
+    // Remove uploads folder (and all subfolders) if they exist
     //------------------------------------------------------------------
+    $uploads_dir = $GLOBALS['xoops']->path("uploads/{$moduleDirName}");
+    $dirInfo = new \SplFileInfo($uploads_dir);
+    if ($dirInfo->isDir()) {
+        // The directory exists so delete it
+        if (!$utility::rrmdir($uploads_dir)) {
+            $module->setErrors(\sprintf(\constant('CO_' . $moduleDirNameUpper . '_ERROR_BAD_DEL_PATH'), $uploads_dir));
+            $success = false;
+        }
+    }
+    unset($dirInfo);
+
+    //------------------------------------------------------------------
+    // Rename uploads folder to BAK and add date to name
+    // NOT USED CURRENTLY
+    //------------------------------------------------------------------
+    /*
     $uploadDirectory = $GLOBALS['xoops']->path("uploads/$moduleDirName");
     $dirInfo = new \SplFileInfo($uploadDirectory);
     if ($dirInfo->isDir()) {
@@ -53,6 +70,7 @@ function xoops_module_uninstall_wgevents(\XoopsModule $module)
         }
     }
     unset($dirInfo);
+    */
     /*
     //------------ START ----------------
     //------------------------------------------------------------------
@@ -64,8 +82,8 @@ function xoops_module_uninstall_wgevents(\XoopsModule $module)
             $module->setErrors(\sprintf(\_AM_WGEVENTS_ERROR_BAD_REMOVE, $xmlfile));
         }
     }
-//    return $success && $delOk; // use this if you're using this routine
-*/
+    return $success && $delOk; // use this if you're using this routine
+    */
 
     return $success;
     //------------ END  ----------------
