@@ -19,6 +19,7 @@
  - theme xswatch4_wge (goffy)
  - replacing includeq and foreachq (mamba/goffy)
  - fixed bugs (cesagonchu/goffy)
+ - removed renaming upload folder when uninstalling (cesagonchu/goffy)
  
 ==============================================================
 1.0.0 [2022/01/04 9:28:23]
